feat: generate competition stage package plan types
